# spacetraders-sdk

./: .gitignore  README.md  analyze_extractions.py  analyze_surveys.py  api.py  classes_n_enums.py  client.py  mining.py  pyproject.toml  qtgui.py  setup.py
.openapi-generator/: FILES
docs/models/: Chart.md  FactionTrait.md  Market.md  MarketTransaction.md  ScannedShip.md  ShipFrame.md  ShipModule.md  ShipMount.md  ShipNavRoute.md  ShipRegistration.md  ShipRole.md  ShipType.md  ShipyardShip.md  ShipyardTransaction.md  Survey.md  TradeSymbol.md  WaypointTrait.md
gui/: gui.py  main.py
openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
openapi_client/apis/: path_to_api.py
openapi_client/model/: agent.py  agent.pyi  chart.py  chart.pyi  connected_system.py  connected_system.pyi  contract.py  contract.pyi  contract_deliver_good.py  contract_deliver_good.pyi  contract_payment.py  contract_payment.pyi  contract_terms.py  cooldown.py  cooldown.pyi  extraction.py  extraction.pyi  extraction_yield.py  extraction_yield.pyi  faction.py  faction.pyi  faction_trait.py  faction_trait.pyi  jump_gate.py  market.py  market.pyi  market_trade_good.py  market_trade_good.pyi  market_transaction.py  market_transaction.pyi  meta.py  meta.pyi  scanned_ship.py  scanned_ship.pyi  scanned_system.py  scanned_system.pyi  ship.py  ship.pyi  ship_cargo.py  ship_cargo.pyi  (+66 more)
openapi_client/models/: __init__.py
openapi_client/paths/: __init__.py
test/test_models/: test_agent.py  test_chart.py  test_connected_system.py  test_contract.py  (+51 more)
(+89 files in other folders)
