[tool.poetry]
name = "spacetraders-sdk"
version = "0.1.0"
description = ""
authors = ["Felix Baumkötter <feba661@gmail.com>", "Jonathan Sigrist <jSigrist@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~=3.10"
tqdm = "*"
pysimplegui = "*"
pyperclip = "*"
colorlog = "*"
certifi = "=14.5.14"
frozendict = "~=2.3.4"
python-dateutil = "~=2.7.0"
setuptools = ">=21.0.0"
typing_extensions = "~=4.3.0"
urllib3 = "~=1.26.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"